--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start:dev": "nx run-many -t serve --all --inspect=false"
+    "start:dev": "nx run-many -t serve --all --inspect=false",
+    "create-nest:service": "nx g @nx/nest:app  --directory=apps",
+    "create-nest:lib": "nx g @nx/nest:lib  --directory=libs"
   },
   "private": true,
   "dependencies": {
@@ -12,9 +14,11 @@
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/platform-express": "^11.0.0",
     "@types/express": "^4.17.23",
+    "@types/nodemailer": "^7.0.1",
     "axios": "^1.6.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "nodemailer": "^7.0.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
