--- a/apps/backend/apps/auth-service/tsconfig.app.json
+++ b/apps/backend/apps/auth-service/tsconfig.app.json
@@ -9,7 +9,7 @@
     "emitDecoratorMetadata": true,
     "target": "es2021"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "../../libs/entities/src/**/*.ts"],
   "exclude": [
     "out-tsc",
     "dist",
@@ -21,6 +21,9 @@
     "eslint.config.mjs"
   ],
   "references": [
+    {
+      "path": "../../entities/tsconfig.lib.json"
+    },
     {
       "path": "../../libs/shared-utils/tsconfig.lib.json"
     }
