--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,17 +10,21 @@
   "private": true,
   "dependencies": {
     "@nestjs/common": "^11.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.0",
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/typeorm": "^11.0.0",
     "@types/express": "^4.17.23",
     "@types/nodemailer": "^7.0.1",
     "axios": "^1.6.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "nodemailer": "^7.0.6",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.1.14",
+    "rxjs": "^7.8.0",
+    "typeorm": "^0.3.26"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -30,8 +34,8 @@
     "@nx/eslint": "21.4.1",
     "@nx/eslint-plugin": "21.4.1",
     "@nx/jest": "21.4.1",
-    "@nx/js": "21.4.1",
-    "@nx/nest": "^21.4.1",
+    "@nx/js": "21.5.1",
+    "@nx/nest": "^21.5.1",
     "@nx/node": "21.4.1",
     "@nx/web": "21.4.1",
     "@nx/webpack": "21.4.1",
@@ -59,6 +63,7 @@
   },
   "workspaces": [
     "apps/*",
-    "libs/*"
+    "libs/*",
+    "entities"
   ]
 }
