--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,9 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@cornerstonejs/core": "^4.1.3",
+    "@cornerstonejs/dicom-image-loader": "^4.1.3",
+    "@cornerstonejs/nifti-volume-loader": "^4.1.3",
+    "@cornerstonejs/tools": "^4.1.3",
+    "@ohif/ui-next": "^3.11.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dcmjs": "^0.45.0",
+    "dicom-parser": "^1.8.21",
+    "dicomweb-client": "^0.11.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
