--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,25 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
-
-    "@cornerstonejs/nifti-volume-loader": "^4.1.3",
-
-    "@ohif/ui-next": "^3.11.0",
-
-    "@radix-ui/react-scroll-area": "^1.2.10",
-
-    "@radix-ui/react-switch": "^1.2.6",
-    "@radix-ui/react-tooltip": "^1.2.8",
     "@cornerstonejs/core": "^4.2.3",
     "@cornerstonejs/dicom-image-loader": "^4.2.3",
+    "@cornerstonejs/nifti-volume-loader": "^4.1.3",
     "@cornerstonejs/streaming-image-volume-loader": "^1.86.1",
     "@cornerstonejs/tools": "^4.2.3",
     "@hookform/resolvers": "^5.2.1",
+    "@ohif/ui": "^3.11.0",
+    "@ohif/ui-next": "^3.11.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
