--- a/apps/backend/apps/auth-service/.env
+++ b/apps/backend/apps/auth-service/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=12345678
+DB_PASSWORD=postgres
 DB_NAME=auth_db
 TYPEORM_SYNC=true
 TYPEORM_LOGGING=false
