--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,6 +18,8 @@
     "@types/express": "^4.17.23",
     "@types/nodemailer": "^7.0.1",
     "axios": "^1.6.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "nodemailer": "^7.0.6",
