--- a/apps/backend/apps/imaging-service/tsconfig.json
+++ b/apps/backend/apps/imaging-service/tsconfig.json
@@ -10,6 +10,9 @@
       "path": "../../libs/shared-enums"
     },
     {
+      "path": "../../entities"
+    },
+    {
       "path": "../../libs/database"
     },
     {
