--- a/apps/backend/nx.json
+++ b/apps/backend/nx.json
@@ -38,7 +38,8 @@
         "libs/shared-decorators/*",
         "libs/entities/*",
         "entities/*",
-        "libs/database/*"
+        "libs/database/*",
+        "libs/shared-domain/*"
       ]
     },
     {
@@ -84,7 +85,8 @@
         "libs/shared-decorators/*",
         "libs/entities/*",
         "entities/*",
-        "libs/database/*"
+        "libs/database/*",
+        "libs/shared-domain/*"
       ],
       "options": {
         "typecheck": {
