--- a/apps/backend/tsconfig.base.json
+++ b/apps/backend/tsconfig.base.json
@@ -25,6 +25,7 @@
       "@backend/shared-decorators": [
         "backend/libs/shared-decorators/src/index.ts"
       ],
+      "@backend/shared-domain": ["backend/libs/shared-domain/src/index.ts"],
       "@backend/shared-enums": ["backend/libs/shared-enums/src/index.ts"],
       "@backend/shared-guards": ["backend/libs/shared-guards/src/index.ts"],
       "@backend/shared-interfaces": [
