--- a/apps/backend/apps/system-service/tsconfig.app.json
+++ b/apps/backend/apps/system-service/tsconfig.app.json
@@ -9,7 +9,14 @@
     "emitDecoratorMetadata": true,
     "target": "es2021"
   },
-  "include": ["src/**/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    "../../libs/shared-domain/src/lib/entities/systems/ai-analysis.entity.ts",
+    "../../libs/shared-domain/src/lib/entities/systems/notification.entity.ts",
+    "../../libs/shared-domain/src/lib/entities/systems/system-log.entity.ts",
+    "../../libs/shared-domain/src/lib/entities/systems/audit-log.entity.ts",
+    "src/**/*.dto.ts"
+  ],
   "exclude": [
     "out-tsc",
     "dist",
@@ -22,7 +29,16 @@
   ],
   "references": [
     {
+      "path": "../../libs/shared-utils/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/shared-enums/tsconfig.lib.json"
+    },
+    {
+      "path": "../../libs/shared-domain/tsconfig.lib.json"
+    },
+    {
+      "path": "../../libs/redis/tsconfig.lib.json"
     },
     {
       "path": "../../libs/database/tsconfig.lib.json"
