--- a/apps/backend/apps/system-service/tsconfig.json
+++ b/apps/backend/apps/system-service/tsconfig.json
@@ -4,7 +4,16 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/shared-utils"
+    },
+    {
       "path": "../../libs/shared-enums"
+    },
+    {
+      "path": "../../libs/shared-domain"
+    },
+    {
+      "path": "../../libs/redis"
     },
     {
       "path": "../../libs/database"
