--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@keyv/redis": "^5.1.2",
     "@nestjs/common": "^11.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.0",
@@ -22,6 +23,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "keyv": "^5.5.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.1.14",
