[ADD] - simply CRUD entities in system service without logic and validation, config auto detect change in nx.json

--- a/apps/.vscode/settings.json
+++ b/apps/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "nxConsole.nxWorkspacePath": "backend"
+    "nxConsole.nxWorkspacePath": "backend",
+    "nxConsole.generateAiAgentRules": true
 }
