--- a/apps/backend/apps/api-gateway/tsconfig.app.json
+++ b/apps/backend/apps/api-gateway/tsconfig.app.json
@@ -22,6 +22,12 @@
   ],
   "references": [
     {
+      "path": "../../libs/shared-client/tsconfig.lib.json"
+    },
+    {
+      "path": "../../libs/shared-domain/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/shared-utils/tsconfig.lib.json"
     }
   ]
