--- a/apps/backend/apps/system-service/tsconfig.app.json
+++ b/apps/backend/apps/system-service/tsconfig.app.json
@@ -15,7 +15,8 @@
     "../../libs/shared-domain/src/lib/entities/systems/notification.entity.ts",
     "../../libs/shared-domain/src/lib/entities/systems/system-log.entity.ts",
     "../../libs/shared-domain/src/lib/entities/systems/audit-log.entity.ts",
-    "src/**/*.dto.ts"
+    "src/**/*.dto.ts",
+    "../../libs/shared-domain/src/lib/dto/systems/filter-system-log.dto.ts"
   ],
   "exclude": [
     "out-tsc",
@@ -32,13 +33,10 @@
       "path": "../../libs/shared-utils/tsconfig.lib.json"
     },
     {
-      "path": "../../libs/shared-enums/tsconfig.lib.json"
+      "path": "../../libs/redis/tsconfig.lib.json"
     },
     {
       "path": "../../libs/shared-domain/tsconfig.lib.json"
-    },
-    {
-      "path": "../../libs/redis/tsconfig.lib.json"
     },
     {
       "path": "../../libs/database/tsconfig.lib.json"
