--- a/apps/backend/libs/shared-domain/tsconfig.json
+++ b/apps/backend/libs/shared-domain/tsconfig.json
@@ -4,6 +4,9 @@
   "include": [],
   "references": [
     {
+      "path": "../database"
+    },
+    {
       "path": "../shared-enums"
     },
     {
