--- a/apps/backend/apps/imaging-service/tsconfig.json
+++ b/apps/backend/apps/imaging-service/tsconfig.json
@@ -4,13 +4,16 @@
   "include": [],
   "references": [
     {
-      "path": "../../libs/shared-utils"
-    },
-    {
       "path": "../../libs/shared-enums"
     },
     {
+      "path": "../../libs/shared-domain"
+    },
+    {
       "path": "../../entities"
+    },
+    {
+      "path": "../../libs/shared-utils"
     },
     {
       "path": "../../libs/database"
