--- a/apps/backend/apps/patient-service/tsconfig.json
+++ b/apps/backend/apps/patient-service/tsconfig.json
@@ -4,7 +4,7 @@
   "include": [],
   "references": [
     {
-      "path": "../../libs/shared-utils"
+      "path": "../../libs/shared-enums"
     },
     {
       "path": "../../libs/shared-domain"
