--- a/apps/backend/libs/shared-domain/tsconfig.json
+++ b/apps/backend/libs/shared-domain/tsconfig.json
@@ -4,6 +4,12 @@
   "include": [],
   "references": [
     {
+      "path": "../../entities"
+    },
+    {
+      "path": "../shared-interfaces"
+    },
+    {
       "path": "../database"
     },
     {
