--- a/apps/backend/libs/shared-domain/tsconfig.lib.json
+++ b/apps/backend/libs/shared-domain/tsconfig.lib.json
@@ -22,6 +22,12 @@
   ],
   "references": [
     {
+      "path": "../../entities/tsconfig.lib.json"
+    },
+    {
+      "path": "../shared-interfaces/tsconfig.lib.json"
+    },
+    {
       "path": "../database/tsconfig.lib.json"
     },
     {
