refactor: Enhance patient service modules and improve API functionality
- Added PatientEncounterModule to manage patient encounters.
- Updated PatientServiceModule to include PatientEncounterModule in imports and exports.
- Enhanced DiagnosesReportController to support new query parameters for filtering.
- Refactored patient encounter service and controller to utilize message patterns for microservices.
- Improved error handling and validation in queue assignment and patient management features.
- Updated shared domain and enums for better type safety and consistency across the application.
- Refactored frontend components to align with the new API structure and improve user experience.

--- a/apps/backend/libs/shared-domain/tsconfig.lib.json
+++ b/apps/backend/libs/shared-domain/tsconfig.lib.json
@@ -22,6 +22,9 @@
   ],
   "references": [
     {
+      "path": "../shared-interfaces/tsconfig.lib.json"
+    },
+    {
       "path": "../database/tsconfig.lib.json"
     },
     {
