--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,6 +15,8 @@
     "@nestjs/core": "^11.0.0",
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/schedule": "^6.0.1",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/express": "^4.17.23",
     "@types/nodemailer": "^7.0.1",
