--- a/apps/backend/apps/user-service/tsconfig.app.json
+++ b/apps/backend/apps/user-service/tsconfig.app.json
@@ -22,6 +22,9 @@
   ],
   "references": [
     {
+      "path": "../../libs/shared-utils/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/shared-enums/tsconfig.lib.json"
     },
     {
