--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -29,6 +29,7 @@
     "keyv": "^5.5.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
+    "pug": "^3.0.3",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.0",
     "typeorm": "^0.3.26"
@@ -54,6 +55,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.9",
+    "@types/pug": "^2.0.10",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
