feat: Enhance patient report and testing structure
- Introduced detailed CreateDiagnosesReportDto with validation for patient reports, including primary and secondary diagnoses, symptoms, findings, and recommendations.
- Updated Jest configuration for improved test coverage and timeout settings for end-to-end tests.
- Expanded end-to-end tests for patient service, including patient creation, search, encounter management, prescription handling, and queue assignments.
- Added error handling and data validation tests to ensure robustness in patient and queue assignment functionalities.
- Integrated insurance number validation in patient forms across frontend components for better user input handling.

--- a/apps/backend/libs/shared-domain/tsconfig.json
+++ b/apps/backend/libs/shared-domain/tsconfig.json
@@ -7,6 +7,9 @@
       "path": "../../entities"
     },
     {
+      "path": "../shared-utils"
+    },
+    {
       "path": "../shared-interfaces"
     },
     {
