--- a/apps/backend/libs/shared-domain/tsconfig.lib.json
+++ b/apps/backend/libs/shared-domain/tsconfig.lib.json
@@ -25,6 +25,9 @@
       "path": "../../entities/tsconfig.lib.json"
     },
     {
+      "path": "../shared-utils/tsconfig.lib.json"
+    },
+    {
       "path": "../shared-interfaces/tsconfig.lib.json"
     },
     {
