--- a/apps/backend/nx.json
+++ b/apps/backend/nx.json
@@ -43,7 +43,8 @@
         "libs/redis/*",
         "libs/client/*",
         "libs/shared-client/*",
-        "libs/auth-guards/*"
+        "libs/auth-guards/*",
+        "libs/shared-exception/*"
       ]
     },
     {
@@ -94,7 +95,8 @@
         "libs/redis/*",
         "libs/client/*",
         "libs/shared-client/*",
-        "libs/auth-guards/*"
+        "libs/auth-guards/*",
+        "libs/shared-exception/*"
       ],
       "options": {
         "typecheck": {
