refactor: Enhance patient service controllers and services for improved validation and pagination
- Updated PatientCondition, PatientEncounter, and Patient modules to include pagination and validation for UUID formats.
- Refactored controller methods to utilize new RepositoryPaginationDto for consistent pagination handling across services.
- Implemented error handling for invalid UUID formats and added validation for search parameters in patient queries.
- Removed deprecated search methods and streamlined service methods to improve maintainability and clarity.
- Integrated shared utility functions for validation, enhancing code reuse and reducing redundancy.

--- a/apps/backend/apps/patient-service/tsconfig.json
+++ b/apps/backend/apps/patient-service/tsconfig.json
@@ -4,16 +4,19 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/shared-utils"
+    },
+    {
       "path": "../../libs/shared-interfaces"
     },
     {
       "path": "../../libs/shared-enums"
     },
     {
-      "path": "../../libs/shared-domain"
+      "path": "../../libs/database"
     },
     {
-      "path": "../../libs/database"
+      "path": "../../libs/shared-domain"
     },
     {
       "path": "./tsconfig.app.json"
