--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,8 +17,8 @@
     "@cornerstonejs/tools": "^4.2.3",
     "@hookform/resolvers": "^5.2.1",
     "@ohif/ui-next": "^3.11.0",
-    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dcmjs": "^0.45.0",
     "dicom-parser": "^1.8.21",
     "dicomweb-client": "^0.11.2",
@@ -46,6 +47,7 @@
     "next": "15.5.2",
     "process": "^0.11.10",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.1",
     "react-dnd": "^16.0.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
