--- a/apps/backend/apps/api-gateway/tsconfig.app.json
+++ b/apps/backend/apps/api-gateway/tsconfig.app.json
@@ -22,6 +22,9 @@
   ],
   "references": [
     {
+      "path": "../../libs/shared-interceptor/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/shared-client/tsconfig.lib.json"
     },
     {
