--- a/apps/backend/nx.json
+++ b/apps/backend/nx.json
@@ -44,7 +44,8 @@
         "libs/client/*",
         "libs/shared-client/*",
         "libs/auth-guards/*",
-        "libs/shared-exception/*"
+        "libs/shared-exception/*",
+        "libs/shared-interceptor/*"
       ]
     },
     {
@@ -96,7 +97,8 @@
         "libs/client/*",
         "libs/shared-client/*",
         "libs/auth-guards/*",
-        "libs/shared-exception/*"
+        "libs/shared-exception/*",
+        "libs/shared-interceptor/*"
       ],
       "options": {
         "typecheck": {
