--- a/apps/backend/apps/user-service/tsconfig.app.json
+++ b/apps/backend/apps/user-service/tsconfig.app.json
@@ -25,6 +25,12 @@
       "path": "../../libs/shared-exception/tsconfig.lib.json"
     },
     {
+      "path": "../../libs/shared-utils/tsconfig.lib.json"
+    },
+    {
+      "path": "../../libs/shared-domain/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/shared-enums/tsconfig.lib.json"
     },
     {
