--- a/apps/backend/apps/user-service/tsconfig.json
+++ b/apps/backend/apps/user-service/tsconfig.json
@@ -7,6 +7,12 @@
       "path": "../../libs/shared-exception"
     },
     {
+      "path": "../../libs/shared-utils"
+    },
+    {
+      "path": "../../libs/shared-domain"
+    },
+    {
       "path": "../../libs/shared-enums"
     },
     {
