refactor: Update patient service and shared libraries
- Added new shared libraries for exception handling and interceptors to enhance error management and response transformation.
- Updated tsconfig files to include new shared libraries for better module resolution.
- Refactored AppController to integrate ConfigService for improved database configuration checks.
- Removed deprecated DTOs related to patient and diagnosis management to streamline the codebase.
- Cleaned up import statements and ensured consistent naming conventions across the project.

--- a/apps/backend/tsconfig.base.json
+++ b/apps/backend/tsconfig.base.json
@@ -31,6 +31,12 @@
       "@backend/shared-interfaces": [
         "backend/libs/shared-interfaces/src/index.ts"
       ],
+      "@backend/shared-interceptor": [
+        "backend/libs/shared-interceptor/src/index.ts"
+      ],
+      "@backend/shared-exception": [
+        "backend/libs/shared-exception/src/index.ts"
+      ],
       "@backend/shared-utils": ["backend/libs/shared-utils/src/index.ts"]
     }
   }
