--- a/apps/backend/apps/user-service/tsconfig.json
+++ b/apps/backend/apps/user-service/tsconfig.json
@@ -10,6 +10,9 @@
       "path": "../../libs/shared-exception"
     },
     {
+      "path": "../../libs/shared-domain"
+    },
+    {
       "path": "../../libs/shared-enums"
     },
     {
