[Update] `Refactor User Module and Auth Guards for Role-Based Access Control`

--- a/apps/backend/apps/api-gateway/tsconfig.app.json
+++ b/apps/backend/apps/api-gateway/tsconfig.app.json
@@ -22,6 +22,12 @@
   ],
   "references": [
     {
+      "path": "../../libs/auth-guards/tsconfig.lib.json"
+    },
+    {
+      "path": "../../libs/shared-enums/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/shared-interceptor/tsconfig.lib.json"
     },
     {
