--- a/apps/backend/apps/api-gateway/tsconfig.json
+++ b/apps/backend/apps/api-gateway/tsconfig.json
@@ -4,6 +4,12 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/auth-guards"
+    },
+    {
+      "path": "../../libs/shared-enums"
+    },
+    {
       "path": "../../libs/shared-interceptor"
     },
     {
