[ADD] - api get all queue based in room

--- a/apps/backend/apps/api-gateway/tsconfig.app.json
+++ b/apps/backend/apps/api-gateway/tsconfig.app.json
@@ -28,6 +28,12 @@
       "path": "../../libs/shared-client/tsconfig.lib.json"
     },
     {
+      "path": "../../libs/shared-enums/tsconfig.lib.json"
+    },
+    {
+      "path": "../../libs/shared-decorators/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/shared-domain/tsconfig.lib.json"
     },
     {
