--- a/apps/backend/apps/user-service/tsconfig.app.json
+++ b/apps/backend/apps/user-service/tsconfig.app.json
@@ -13,7 +13,7 @@
     "src/**/*.ts",
     "../../libs/shared-domain/src/lib/dto/user-service/room-assignment/update-room-assignment.dto.ts",
     "../../libs/shared-domain/src/lib/dto/user-service/room-assignment/create-room-assignment.dto.ts"
-  ],
+, "src/app/modules/room-assignments/entities/room-assignment.entity.ts"  ],
   "exclude": [
     "out-tsc",
     "dist",
