[Udpate]`feat: update token verification and role-based routing in user service and frontend`
This commit includes the following changes:

* Updated `UsersController` to verify tokens and return user ID and role.
* Updated `UsersService` to verify tokens and return

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -42,6 +42,7 @@
     "dicomweb-client": "^0.11.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lodash.merge": "^4.6.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
