feat: Add seeding functionality and refactor user service modules
- Introduced seeding scripts in `package.json` for populating initial data.
- Added `SeedingModule` to both `api-gateway` and `user-service` for better data management.
- Removed obsolete `RoomsController` and `RoomsModule` to streamline the user service.
- Updated `UserServiceModule` to include `EmployeeSchedulesModule` for enhanced functionality.
- Refactored frontend schedule pages to utilize API calls instead of mock data, improving data handling and user experience.

--- a/apps/backend/apps/api-gateway/package.json
+++ b/apps/backend/apps/api-gateway/package.json
@@ -85,5 +85,17 @@
   "dependencies": {
     "@types/cors": "^2.8.19",
     "cors": "^2.8.5"
+  },
+  "scripts": {
+    "seed": "ts-node src/scripts/seed.ts",
+    "seed:dev": "ts-node-dev --respawn src/scripts/seed.ts",
+    "seed:run": "ts-node src/scripts/seed.ts run",
+    "seed:reset": "ts-node src/scripts/seed.ts reset",
+    "seed:clear": "ts-node src/scripts/seed.ts clear",
+    "seed:departments": "ts-node src/scripts/seed.ts departments",
+    "seed:users": "ts-node src/scripts/seed.ts users",
+    "seed:rooms": "ts-node src/scripts/seed.ts rooms",
+    "seed:shift-templates": "ts-node src/scripts/seed.ts shift-templates",
+    "seed:status": "ts-node src/scripts/seed.ts status"
   }
 }
