Fix login role & redirect, refactor, now use state and cookies for login

--- a/apps/backend/apps/api-gateway/tsconfig.json
+++ b/apps/backend/apps/api-gateway/tsconfig.json
@@ -4,10 +4,7 @@
   "include": [],
   "references": [
     {
-      "path": "../../libs/shared-decorators"
-    },
-    {
-      "path": "../../libs/shared-enums"
+      "path": "../../libs/shared-interfaces"
     },
     {
       "path": "../../libs/shared-interceptor"
@@ -23,6 +20,12 @@
     },
     {
       "path": "../../libs/shared-guards"
+    },
+    {
+      "path": "../../libs/shared-decorators"
+    },
+    {
+      "path": "../../libs/shared-enums"
     },
     {
       "path": "./tsconfig.app.json"
