--- a/apps/backend/libs/shared-guards/tsconfig.json
+++ b/apps/backend/libs/shared-guards/tsconfig.json
@@ -4,6 +4,15 @@
   "include": [],
   "references": [
     {
+      "path": "../shared-enums"
+    },
+    {
+      "path": "../shared-interfaces"
+    },
+    {
+      "path": "../shared-decorators"
+    },
+    {
       "path": "./tsconfig.lib.json"
     },
     {
