--- a/apps/backend/libs/shared-guards/tsconfig.lib.json
+++ b/apps/backend/libs/shared-guards/tsconfig.lib.json
@@ -15,6 +15,16 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src/**/*.ts"],
-  "references": [],
+  "references": [
+    {
+      "path": "../shared-enums/tsconfig.lib.json"
+    },
+    {
+      "path": "../shared-interfaces/tsconfig.lib.json"
+    },
+    {
+      "path": "../shared-decorators/tsconfig.lib.json"
+    }
+  ],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
