--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -41,6 +41,7 @@
     "dcmjs": "^0.45.0",
     "dicom-parser": "^1.8.21",
     "dicomweb-client": "^0.11.2",
+    "formik": "^2.4.6",
     "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -57,6 +58,7 @@
     "react-redux": "^9.2.0",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
+    "yup": "^1.7.1",
     "zod": "^4.1.5"
   },
   "devDependencies": {
@@ -67,6 +69,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/yup": "^0.32.0",
     "copy-webpack-plugin": "^13.0.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
