[ADD] - redesign patient overview and Clinic visit detail

--- a/apps/backend/apps/patient-service/tsconfig.app.json
+++ b/apps/backend/apps/patient-service/tsconfig.app.json
@@ -34,6 +34,9 @@
       "path": "../../libs/shared-enums/tsconfig.lib.json"
     },
     {
+      "path": "../../libs/shared-interfaces/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/shared-domain/tsconfig.lib.json"
     },
     {
