--- a/apps/backend/apps/patient-service/tsconfig.json
+++ b/apps/backend/apps/patient-service/tsconfig.json
@@ -7,6 +7,9 @@
       "path": "../../libs/shared-enums"
     },
     {
+      "path": "../../libs/shared-interfaces"
+    },
+    {
       "path": "../../libs/shared-domain"
     },
     {
