--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,7 +16,6 @@
     "@cornerstonejs/streaming-image-volume-loader": "^1.86.1",
     "@cornerstonejs/tools": "^4.2.3",
     "@hookform/resolvers": "^5.2.1",
-    "@ohif/ui-next": "^3.11.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -56,6 +55,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
     "yup": "^1.7.1",
