create api, get department with search, get roomId by department with search, api join user service with patient service to get doctor from a room with correct working schedule, call api in fe

--- a/apps/backend/apps/user-service/tsconfig.app.json
+++ b/apps/backend/apps/user-service/tsconfig.app.json
@@ -14,7 +14,7 @@
     "../../libs/shared-domain/src/lib/dto/user-service/room-assignment/update-room-assignment.dto.ts",
     "../../libs/shared-domain/src/lib/dto/user-service/room-assignment/create-room-assignment.dto.ts",
     "src/app/modules/room-assignments/entities/room-assignment.entity.ts"
-  ],
+, "../../libs/shared-domain/src/lib/dto/user-service/qualification/update-qualification.dto.ts", "../../libs/shared-domain/src/lib/dto/user-service/qualification/create-qualification.dto.ts", "../../libs/shared-domain/src/lib/dto/user-service/user/token-response.dto.ts", "../../libs/shared-domain/src/lib/dto/user-service/user/update-user.dto.ts", "../../libs/shared-domain/src/lib/dto/user-service/user/create-user.dto.ts"  ],
   "exclude": [
     "out-tsc",
     "dist",
