--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,6 +20,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/express": "^4.17.23",
+    "@types/moment": "^2.11.29",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.1",
     "axios": "^1.6.0",
@@ -31,6 +32,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "keyv": "^5.5.2",
+    "moment": "^2.30.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
