Enhance API Gateway and Seeding functionality: Introduce health check endpoints for microservices, improve seeding operations for user, patient, and imaging services, and add detailed error handling. Update module imports to include necessary client modules for better service communication.

--- a/apps/backend/apps/imaging-service/tsconfig.json
+++ b/apps/backend/apps/imaging-service/tsconfig.json
@@ -4,6 +4,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/shared-client"
+    },
+    {
       "path": "../../libs/shared-enums"
     },
     {
