--- a/apps/backend/apps/patient-service/tsconfig.app.json
+++ b/apps/backend/apps/patient-service/tsconfig.app.json
@@ -31,6 +31,9 @@
   ],
   "references": [
     {
+      "path": "../../libs/shared-client/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/shared-enums/tsconfig.lib.json"
     },
     {
