--- a/apps/backend/apps/imaging-service/tsconfig.app.json
+++ b/apps/backend/apps/imaging-service/tsconfig.app.json
@@ -28,6 +28,9 @@
       "path": "../../libs/shared-enums/tsconfig.lib.json"
     },
     {
+      "path": "../../libs/shared-exception/tsconfig.lib.json"
+    },
+    {
       "path": "../../entities/tsconfig.lib.json"
     },
     {
