[MODIFY] - logic get queue based on priority and push down this queue when completed.

--- a/apps/backend/apps/api-gateway/tsconfig.app.json
+++ b/apps/backend/apps/api-gateway/tsconfig.app.json
@@ -28,6 +28,9 @@
       "path": "../../libs/shared-client/tsconfig.lib.json"
     },
     {
+      "path": "../../libs/database/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/shared-interceptor/tsconfig.lib.json"
     },
     {
