--- a/apps/backend/apps/api-gateway/tsconfig.json
+++ b/apps/backend/apps/api-gateway/tsconfig.json
@@ -10,6 +10,9 @@
       "path": "../../libs/shared-client"
     },
     {
+      "path": "../../libs/database"
+    },
+    {
       "path": "../../libs/shared-interceptor"
     },
     {
