radiologist UI, image uploading an extract metadata and handling process from backend

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -29,6 +29,9 @@
     "class-validator": "^0.14.2",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
+    "dcmjs": "^0.45.0",
+    "dcmjs-imaging": "^0.2.2",
+    "dicom-parser": "^1.8.21",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "keyv": "^5.5.2",
