--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -78,6 +78,7 @@
     "copy-webpack-plugin": "^13.0.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
