--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -56,11 +56,12 @@
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
-    "sonner": "^2.0.7",
     "react-select": "^5.10.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
     "yup": "^1.7.1",
