--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -35,6 +35,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/js-cookie": "^3.0.6",
+    "@types/jspdf": "^1.3.3",
     "axios": "^1.11.0",
     "chroma-js": "^3.1.2",
     "class-variance-authority": "^0.7.1",
@@ -48,6 +49,8 @@
     "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lodash.merge": "^4.6.2",
     "lucide-react": "^0.542.0",
@@ -59,8 +62,8 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
-    "sonner": "^2.0.7",
     "react-select": "^5.10.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
     "yup": "^1.7.1",
