--- a/apps/backend/apps/user-service/tsconfig.app.json
+++ b/apps/backend/apps/user-service/tsconfig.app.json
@@ -13,8 +13,13 @@
     "src/**/*.ts",
     "../../libs/shared-domain/src/lib/dto/user-service/room-assignment/update-room-assignment.dto.ts",
     "../../libs/shared-domain/src/lib/dto/user-service/room-assignment/create-room-assignment.dto.ts",
-    "src/app/modules/room-assignments/entities/room-assignment.entity.ts"
-, "../../libs/shared-domain/src/lib/dto/user-service/qualification/update-qualification.dto.ts", "../../libs/shared-domain/src/lib/dto/user-service/qualification/create-qualification.dto.ts", "../../libs/shared-domain/src/lib/dto/user-service/user/token-response.dto.ts", "../../libs/shared-domain/src/lib/dto/user-service/user/update-user.dto.ts", "../../libs/shared-domain/src/lib/dto/user-service/user/create-user.dto.ts"  ],
+    "src/app/modules/room-assignments/entities/room-assignment.entity.ts",
+    "../../libs/shared-domain/src/lib/dto/user-service/qualification/update-qualification.dto.ts",
+    "../../libs/shared-domain/src/lib/dto/user-service/qualification/create-qualification.dto.ts",
+    "../../libs/shared-domain/src/lib/dto/user-service/user/token-response.dto.ts",
+    "../../libs/shared-domain/src/lib/dto/user-service/user/update-user.dto.ts",
+    "../../libs/shared-domain/src/lib/dto/user-service/user/create-user.dto.ts"
+  ],
   "exclude": [
     "out-tsc",
     "dist",
@@ -27,16 +32,19 @@
   ],
   "references": [
     {
-      "path": "../../libs/shared-domain/tsconfig.lib.json"
+      "path": "../../libs/shared-enums/tsconfig.lib.json"
     },
     {
-      "path": "../../libs/shared-enums/tsconfig.lib.json"
+      "path": "../../libs/redis/tsconfig.lib.json"
     },
     {
       "path": "../../libs/shared-utils/tsconfig.lib.json"
     },
     {
       "path": "../../libs/shared-exception/tsconfig.lib.json"
+    },
+    {
+      "path": "../../libs/shared-domain/tsconfig.lib.json"
     },
     {
       "path": "../../libs/database/tsconfig.lib.json"
