--- a/apps/backend/apps/user-service/tsconfig.json
+++ b/apps/backend/apps/user-service/tsconfig.json
@@ -4,16 +4,19 @@
   "include": [],
   "references": [
     {
-      "path": "../../libs/shared-domain"
+      "path": "../../libs/shared-enums"
     },
     {
-      "path": "../../libs/shared-enums"
+      "path": "../../libs/redis"
     },
     {
       "path": "../../libs/shared-utils"
     },
     {
       "path": "../../libs/shared-exception"
+    },
+    {
+      "path": "../../libs/shared-domain"
     },
     {
       "path": "../../libs/database"
