--- a/apps/backend/apps/imaging-service/tsconfig.app.json
+++ b/apps/backend/apps/imaging-service/tsconfig.app.json
@@ -25,19 +25,22 @@
       "path": "../../libs/shared-client/tsconfig.lib.json"
     },
     {
-      "path": "../../libs/shared-enums/tsconfig.lib.json"
+      "path": "../../libs/redis/tsconfig.lib.json"
     },
     {
       "path": "../../libs/shared-exception/tsconfig.lib.json"
     },
     {
+      "path": "../../libs/shared-enums/tsconfig.lib.json"
+    },
+    {
       "path": "../../entities/tsconfig.lib.json"
     },
     {
-      "path": "../../libs/shared-domain/tsconfig.lib.json"
+      "path": "../../libs/database/tsconfig.lib.json"
     },
     {
-      "path": "../../libs/database/tsconfig.lib.json"
+      "path": "../../libs/shared-domain/tsconfig.lib.json"
     },
     {
       "path": "../../libs/shared-utils/tsconfig.lib.json"
