--- a/apps/backend/apps/imaging-service/tsconfig.json
+++ b/apps/backend/apps/imaging-service/tsconfig.json
@@ -7,19 +7,22 @@
       "path": "../../libs/shared-client"
     },
     {
-      "path": "../../libs/shared-enums"
+      "path": "../../libs/redis"
     },
     {
       "path": "../../libs/shared-exception"
     },
     {
+      "path": "../../libs/shared-enums"
+    },
+    {
       "path": "../../entities"
     },
     {
-      "path": "../../libs/shared-domain"
+      "path": "../../libs/database"
     },
     {
-      "path": "../../libs/database"
+      "path": "../../libs/shared-domain"
     },
     {
       "path": "../../libs/shared-utils"
