[ADD] - Diagnosis report page and view detail UI, fix error  api about logic in findAll  in patient-encounter, and fix some small errors api in diagnosis report

--- a/apps/backend/apps/patient-service/tsconfig.json
+++ b/apps/backend/apps/patient-service/tsconfig.json
@@ -4,16 +4,19 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/shared-interfaces"
+    },
+    {
       "path": "../../libs/shared-client"
     },
     {
       "path": "../../libs/shared-enums"
     },
     {
-      "path": "../../libs/shared-interfaces"
+      "path": "../../libs/shared-domain"
     },
     {
-      "path": "../../libs/shared-domain"
+      "path": "../../libs/redis"
     },
     {
       "path": "../../libs/database"
