--- a/apps/backend/apps/patient-service/tsconfig.app.json
+++ b/apps/backend/apps/patient-service/tsconfig.app.json
@@ -30,16 +30,19 @@
   ],
   "references": [
     {
+      "path": "../../libs/shared-interfaces/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/shared-client/tsconfig.lib.json"
     },
     {
       "path": "../../libs/shared-enums/tsconfig.lib.json"
     },
     {
-      "path": "../../libs/shared-interfaces/tsconfig.lib.json"
+      "path": "../../libs/shared-domain/tsconfig.lib.json"
     },
     {
-      "path": "../../libs/shared-domain/tsconfig.lib.json"
+      "path": "../../libs/redis/tsconfig.lib.json"
     },
     {
       "path": "../../libs/database/tsconfig.lib.json"
