--- a/apps/backend/apps/patient-service/tsconfig.app.json
+++ b/apps/backend/apps/patient-service/tsconfig.app.json
@@ -36,6 +36,9 @@
       "path": "../../libs/shared-client/tsconfig.lib.json"
     },
     {
+      "path": "../../libs/shared-decorators/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/shared-enums/tsconfig.lib.json"
     },
     {
