--- a/apps/backend/apps/patient-service/tsconfig.json
+++ b/apps/backend/apps/patient-service/tsconfig.json
@@ -10,6 +10,9 @@
       "path": "../../libs/shared-client"
     },
     {
+      "path": "../../libs/shared-decorators"
+    },
+    {
       "path": "../../libs/shared-enums"
     },
     {
