--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,12 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^44.3.0",
+    "@ckeditor/ckeditor5-react": "^11.0.0",
     "@cornerstonejs/ai": "^4.3.10",
     "@cornerstonejs/core": "^4.2.3",
     "@cornerstonejs/dicom-image-loader": "^4.2.3",
     "@cornerstonejs/nifti-volume-loader": "^4.1.3",
     "@cornerstonejs/streaming-image-volume-loader": "^1.86.1",
     "@cornerstonejs/tools": "^4.2.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -58,12 +62,16 @@
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "process": "^0.11.10",
-    "react": "19.1.0",
+    "react": "^18.3.1",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.2",
+    "slate": "^0.118.1",
+    "slate-history": "^0.113.1",
+    "slate-react": "^0.119.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
