--- a/apps/backend/apps/system-service/tsconfig.json
+++ b/apps/backend/apps/system-service/tsconfig.json
@@ -4,6 +4,12 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/shared-enums"
+    },
+    {
+      "path": "../../libs/shared-interfaces"
+    },
+    {
       "path": "../../libs/shared-utils"
     },
     {
