--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -66,6 +66,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.2",
+    "signature-animation": "^1.2.1",
     "slate": "^0.118.1",
     "slate-history": "^0.113.1",
     "slate-react": "^0.119.0",
