--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,18 +1,83 @@
-name: Docker Image CI
+name: DICOM_BE CI/CD
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-
-  build:
-
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      # 1️⃣ Checkout repo
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # 2️⃣ Setup Node.js
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "pnpm"
+
+      # 3️⃣ Install pnpm globally
+      - name: Install pnpm
+        run: npm install -g pnpm
+
+      # 4️⃣ Install dependencies
+      - name: Install dependencies
+        run: |
+          cd apps/backend
+          pnpm install
+
+      # 5️⃣ Build NestJS services
+      - name: Build NestJS services
+        run: |
+          cd apps/backend
+          pnpm --filter user-service build
+          pnpm --filter patient-service build
+          pnpm --filter imaging-service build
+
+      # 6️⃣ Build Docker images
+      - name: Build Docker image for user-service
+        run: |
+          cd apps/backend
+          docker build -t dicom/user-service:latest -f apps/user-service/Dockerfile .
+
+      - name: Build Docker image for patient-service
+        run: |
+          cd apps/backend
+          docker build -t dicom/patient-service:latest -f apps/patient-service/Dockerfile .
+
+      - name: Build Docker image for imaging-service
+        run: |
+          cd apps/backend
+          docker build -t dicom/imaging-service:latest -f apps/imaging-service/Dockerfile .
+
+      # # 7️⃣ Login Docker Hub (sử dụng Secrets)
+      # - name: Docker Hub Login
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKER_USER }}
+      #     password: ${{ secrets.DOCKER_PASS }}
+
+      # # 8️⃣ Push Docker images
+      # - name: Push Docker images
+      #   run: |
+      #     docker push yourdockerhub/user-service:latest
+      #     docker push yourdockerhub/patient-service:latest
+      #     docker push yourdockerhub/imaging-service:latest
+
+      # # 9️⃣ Deploy lên server qua SSH
+      # - name: Deploy to Server
+      #   uses: appleboy/ssh-action@v0.1.7
+      #   with:
+      #     host: ${{ secrets.SERVER_HOST }}
+      #     username: ${{ secrets.SERVER_USER }}
+      #     key: ${{ secrets.SERVER_SSH_KEY }}
+      #     script: |
+      #       cd /app/dicom-be
+      #       docker compose pull
+      #       docker compose up -d
