--- a/apps/backend/tsconfig.base.json
+++ b/apps/backend/tsconfig.base.json
@@ -21,7 +21,8 @@
     "skipLibCheck": true,
     "strict": true,
     "noUnusedLocals": false,
-    "noImplicitReturns": true,
+    
+    "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
