--- a/apps/backend/libs/shared-domain/tsconfig.lib.json
+++ b/apps/backend/libs/shared-domain/tsconfig.lib.json
@@ -4,14 +4,15 @@
     "baseUrl": ".",
     "rootDir": "src",
     "outDir": "dist",
-    "composite": true,
-    "declaration": true,
-    "declarationMap": true,
     "tsBuildInfoFile": "dist/tsconfig.lib.tsbuildinfo",
     "emitDeclarationOnly": true,
     "forceConsistentCasingInFileNames": true,
     "types": ["node"],
     "target": "es2021",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
     "strictBindCallApply": true,
