--- a/apps/backend/libs/shared-domain/tsconfig.lib.json
+++ b/apps/backend/libs/shared-domain/tsconfig.lib.json
@@ -22,17 +22,15 @@
     "src/**/*.ts",
     "src/lib/entities/systems/ai-analysis.entity.ts",
     "src/lib/entities/systems/notification.entity.ts",
-    "src/lib/entities/systems/system-log.entity.ts"
-, "../../apps/user-service/src/app/modules/room-assignments/entities/room-assignment.entity.ts"  ],
+    "src/lib/entities/systems/system-log.entity.ts",
+    "../../apps/user-service/src/app/modules/room-assignments/entities/room-assignment.entity.ts"
+  ],
   "references": [
     {
-      "path": "../../entities/tsconfig.lib.json"
+      "path": "../shared-interfaces/tsconfig.lib.json"
     },
     {
       "path": "../shared-utils/tsconfig.lib.json"
-    },
-    {
-      "path": "../shared-interfaces/tsconfig.lib.json"
     },
     {
       "path": "../database/tsconfig.lib.json"
